Fix multiple bodies in JsTree output
Ensure JsTree output contains a single body element, resolving the
issue of multiple bodies in the generated HTML file.

JIRA: LIGHTY-128
Signed-off-by: tobias.pobocik <tobias.pobocik@pantheon.tech>